# styx

./: .gitattributes  .gitignore  LICENSE  ONBOARDING.md  README.md  pyproject.toml  styx.yaml.example  styx.yaml.homelab  styx.yaml.runners
.github/fixtures/: styx.test.yaml
.github/scripts/: cross-site-connectivity-test.py  generate_styx_config.py  mvp3-connectivity.py  pistyx_hosted_smoke.py  print_report.py  runner-integration-test.py  runner_config.py  runner_lib.py  stage1-prerequisites.py  stage2-connectivity.py  summarize_reports.py  verify-hub-election-consensus.py  verify-lan-election.py
.github/workflows/: ci.yml  mvp3-connectivity.yml  pistyx-hosted-smoke.yml  runner-smoke.yml  styx-cluster-e2e.yml  styx-gateways.yml  styx-runners.yml
src/styxctl/: __init__.py  bootstrap_config.py  bootstrap_mode.py  cli.py  client_registry.py  cluster_dns.py  cluster_status.py  config.py  dns_publish.py  dns_update.py  gateway.py  install.py  install_report.py  inventory.py  k3s_cluster.py  (+13 more)
tests/: helpers.py  support.py  test_bootstrap_config.py  test_cli.py  test_client_registry.py  test_cluster_status.py  test_config.py  test_dns_update.py  test_gateway.py  test_generate_styx_config.py  test_install.py  test_install_plan.py  test_inventory.py  test_lan_election.py  test_manifests.py  test_network_detect.py  test_network_plan.py  test_nodes.py  test_pistyx_repoint.py  test_pistyx_select.py  test_ports_remap.py  test_prerequisites.py  test_remediation.py  test_render.py  test_reports.py  test_three_node_cluster.py  test_three_site_connectivity.py  test_uninstall.py
