[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "styxctl"
version = "0.2.0"
description = "CLI for preparing, installing, and managing Styx k3s/WireGuard gateway nodes."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Styx Project" }
]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "PyYAML>=6.0.1"
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
]

[project.scripts]
styxctl = "styxctl.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/styxctl"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
